# graphrag

./: README.md  pyproject.toml
data/processed/: benchmark_results.json  form13f_msci_investors_by_manager.csv  msci_10k_fy2025_chunks.jsonl  msci_10q_q1_2026_chunks.jsonl  rag_retrieval_compare_results.json
data/raw/: msci_10k_fy2025.htm  msci_10q_q1_2026.htm
docs/: chunking-and-retrieval.md  parsing.md
notebooks/: infotable_test.ipynb  inspect.ipynb  neo4j_explore.ipynb  retriever.ipynb
src/: download.py  form13f_msci_extract.py  graph_extract.py  load_13f_graph.py  main.py  parse.py  paths.py  rag_retrieval_compare.py  retrieve.py  store.py
